2009-04-27  Badlop  <badlop@process-one.net>

	* src/win32_dns.erl: Fix problem parsing some win32 dns (EJAB-927)

	* src/cyrsasl_digest.erl: Fix auth verification (EJAB-863)

	* src/jlib.erl: Fix recursive call to speedup base64
	decoding (thanks to Jeffrey Rogiers)(EJAB-333)

2009-04-24  Christophe Romain <christophe.romain@process-one.net>

	* src/odbc/ejabberd_odbc.erl: allow to run query bloc as erlang
	function without transaction

	* src/mod_pubsub/mod_pubsub.erl: do not register handlers and hooks
	while plugins and ets tables are not initialized.

2009-04-23  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: improve send last published items
	(not spawned as much) and allow to send last PEP items of our offline
	contacts if configured for (fix discussion issue on standars ML)

2009-04-22  Badlop  <badlop@process-one.net>

	* src/ejabberd.cfg.example: Fix English typos. Fix line length:
	max 80 characters per line. Remove trailing blankspaces. Added
	markers for Vim fold, you may want to add to $HOME/.vimrc this
	line: set modeline
	* src/ejabberdctl.cfg.example: Likewise

	* src/mod_muc/mod_muc.erl: Limit number of characters in Room ID,
	Name and Description (EJAB-899)
	* src/mod_muc/mod_muc_room.erl: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

	* src/cyrsasl.erl: Change API of check_password: pass a function
	to generate the digest (thanks to Graham Whitted)(EJAB-863)
	* src/cyrsasl_anonymous.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise
	* src/cyrsasl_plain.erl: Likewise
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_pam.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

	* src/ejabberd_c2s.erl: Fix for SASL Anonymous connections not